@@ -1,3 +1,8 @@
+2009-07-02  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* unbuffered.c (unbuffered): Fix if catting: Do not output
+	incomplete lines.
+
 2009-05-23  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* unbuffered.c (main): usage corrected, added options -u and -l
